# python101

./: README.md
calc-with-tokenizer/: calc.py
callable/: main.py
count-lines/: count-lines.py  main.py
dataclasses/: main.py
descriptor/: main.py  nomain.py
fastapi/: Pipfile  main.py  start.sh
fibonacci/: fibonacci.py  main.py
finalize/: main.py
format/: main.py
fun/: hello.py
fun-with-utf8/: main.py
hashing/: main.py
initial-values/: main.py
kafka/: Pipfile
main-thread/: main.py
mastering-python/: decorator.py  descriptor.py  fp.py  list.py  logged-debug.py  profiler.py  set.py
memory-view/: main.py
metaclass/: main.py
mode/: main.py
mongodb/: main.py  pyproject.toml
operator/: main.py
pandas-groupby/: main.py
private/: main.py
protocol/: main.py
pygtk/: pygtk.py  pyproject.toml
pyroy/: pyroy.py
python-yacc/: Pipfile
renamer/: pyproject.toml  renamer.py
singledispatch/: main.py
sklearn-ordinal-encoder/: Pipfile  main.py
soup/: Pipfile  main.py
sparse-matrix/: Pipfile  main.py  main_test.py
thrift/: Pipfile  client.py  server.py
tuples-immutability/: main.py
